--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.53.0",
     "@tailwindcss/forms": "^0.5.10",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
